--- a/index.html
+++ b/index.html
@@ -1,13 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles/output.css">
-    <script src="./src/scripts/main.js" defer></script>
+    <script src="./src/scripts/main.js" defer type="module"></script>
     <title>PF Windbnd Vanilla</title>
 </head>
-<body>
-    <h1 class="bg-slate-800 text-white text-2xl">Hola mundo!</h1>
+
+<body class="bg-gray-100">
+    <!-- modal -->
+    <div class="bg-slate-950/70 h-250 w-full fixed t hidden" id="modal">
+        <div class="bg-white h-1/2 p-8 flex flex-col items-center" id="modal-content">
+            <div class="flex justify-between w-full mb-4 ">
+                <h2>Edit your search</h2>
+                <button>X</button>
+            </div>
+            <div
+                class="w-full shadow-md border border-gray-200 h-14 rounded-l-lg focus-within:border-gray-900 focus-within:rounded-r-lg">
+                <p class="text-gray-500 text-sm px-2">Location</p>
+                <input type="text" name="" id="" class="w-full h-8 outline-none px-2">
+            </div>
+            <div
+                class="w-full shadow-md border-t border-b border-gray-200 h-14 focus-within:border-x focus-within:border-gray-900 focus-within:rounded-lg flex flex-col p-1">
+                <p class="text-gray-500 text-sm px-2">Guests</p>
+                <input type="text" name="" id="inGuest" class="w-full h-full outline-none px-2">
+            </div>
+            <div class="flex-col mt-2 w-26 gap-3 hidden">
+                <div class="flex flex-col">
+                    <p>Adults</p>
+                    <p class="text-gray-500 text-sm">Age 13 or above</p>
+                    <div class="flex flex-row justify-between">
+                        <button class="border border-gray-500 px-2 rounded-md text-gray-500" id="menosAdu">-</button>
+                        <p id="contAdu">0</p>
+                        <button class="border border-gray-500 px-2 rounded-md text-gray-500" id="masAdu">+</button>
+                    </div>
+                </div>
+                <br>
+                <div class="flex flex-col">
+                    <p>Children</p>
+                    <p class="text-gray-500 text-sm">Age 13 or above</p>
+                    <div class="flex flex-row justify-between">
+                        <button class="border border-gray-500 px-2 rounded-md text-gray-500" id="menosChi">-</button>
+                        <p id="contChi">0</p>
+                        <button class="border border-gray-500 px-2 rounded-md text-gray-500" id="masChi">+</button>
+                    </div>
+                </div>
+            </div>
+            <button class="bg-orange-500 w-30 text-white px-4 py-2 rounded-3xl cursor-pointer absolute bottom-128">
+                search
+            </button>
+        </div>
+    </div>
+    <!-- principal mobile -->
+    <nav class="">
+        <div class="" id="logo">
+            <img src="./src/images/icons/logo-f7862584.svg" class="">
+        </div>
+        <button class="border border-gray-600 mx-auto my-8 d-block text-white px-4 py-2 rounded-md cursor-pointer"
+            id="open">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="w-4 stroke-red-400">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+            </svg>
+        </button>
+    </nav>
+    <div class="flex flex-row justify-between px-5 py-8">
+        <h1 class="text-2xl text-gray-700 font-bold shadow">Stays in Finland</h1>
+        <p>12+ Stays</p>
+    </div>
+    <div class="flex flex-col px-5" id="contCards">
+        <div class="" id="cards">
+            <img src="https://images.unsplash.com/photo-1505873242700-f289a29e1e0f?ixlib=rb-1.2.1&auto=format&fit=crop&w=2255&q=80"
+                class="w-86 rounded-3xl">
+            <div class=" flex flex-row justify-between px-2 py-1">
+                <p class="text-gray-400 text-sm font-[450]">Entire apartment . 2 beds</p>
+                <div class="flex flex-row justify-center gap-1">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-4 fill-red-400 stroke-red-400">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z" />
+                    </svg>
+                    <p class="text-gray-400 text-sm font-[450] justify-center">4.4</p>
+                </div>
+            </div>
+            <p class="px-2 pb-5 font-[500]">Stylist apartment in center of the city</p>
+        </div>
+    </div>
 </body>
+
 </html>
